# learn

./: .gitignore  .gitmodules  aa.js  index.html  package-lock.json  package.json  test.html  tsconfig.json  utf.html
action/: funtab.cpp  htable.cpp  input.h  node.h  play.sh  scanner.cpp  scanner.h  stack.h  store.h
asm/: Makefile  compile.sh  driver.c  first  first.asm  guichi.c  main.cpp
async/: _main.js  index.html  main.js  package-lock.json  package.json
c/: a.out  calculator.h  funtab.h  hashtable.h  hello  hello.cpp  htable.cpp  htable.h  link.h  list.cpp  list.h  main  main.cpp  makefile  node.cpp  node.h  parser.cpp  parser.h  play.cpp  run.sh  scanner.cpp  scanner.h  sequencer.cpp  sequencer.h  stack.cpp  stack.h  store.cpp  store.h  stringbuffer.h  stringtable.h  symboltable.cpp  symboltable.h
compiler/: demoApp  function.c  main.c  main.i
frontend/: .gitignore  package-lock.json  package.json
gdb/: m4
gl/: Makefile  copy.cpp  glad.c  main  main.cpp
helloworld/: Makefile  index.html  library.cpp  mfile
hot/: 300-400.md  500-600.md  600-700.md  hot.js
learn-cmake/: CMakeLists.txt  main.cpp
learn-cmake/add/: CMakeLists.txt  adder.cpp  adder.h
mk/: Makefile  Makefile1  Makefile2  count_words  count_words.c  lexer.c  lexer.l
opengl/: Makefile  main.cpp
primer/: FooBar.h  HasPtr.h  Makefile  Sale_data.cpp  Sales_Data.cpp  Sales_Data.h  Sales_data.cpp  Sales_data.h  Sales_item.h  Screen.cpp  Screen.h  StrBlob.cpp  StrBlob.h  StrBlobPtr.cpp  StrBlobPtr.h  Window_mgr.h  a.h  b.cpp  b.h  extern.cpp  f.txt  fn.h  header.h  hello.cpp  hello.h  (+15 more)
(+116 files in other folders)
