cmake_minimum_required(VERSION 3.1)
project(hello_guichi)
add_executable(${PROJECT_NAME} main.cpp)
set(MY_NAEM HOME)
function(print)
  foreach(var ${ARGN})
    message("${var} is ${${var}}")
  endforeach(var )
endfunction()
function(print_env)
  foreach(var ${ARGN})
    message("${var} is $ENV{${var}}")
  endforeach(var )
endfunction()

print_env(PATH)
